<resources>
    <string name="_30_days_string">30 days</string>
    <string name="add_icon_description_string">Add icon</string>
    <string name="add_new_template_string">Add new template</string>
    <string name="addRecordHeader">New record</string>
    <string name="am_string">AM</string>
    <string name="amountOfDays">Tracked days:</string>
    <string name="app_name">MoneySaver</string>
    <string name="badge_for_label_content_description_string">Just a badge for label</string>
    <string name="browse_outcomes">Browse your outcomes</string>
    <string name="browse_templates_string">Browse your templates</string>
    <string name="cancel_string">Cancel</string>
    <string name="choose_confirm_password_string">Please choose and confirm your password</string>
    <string name="choose_date_string">Choose date</string>
    <string name="choose_tag_for_filter">Choose tag for filter</string>
    <string name="chooseTag">Tag:</string>
    <string name="chooseWallet">Wallet:</string>
    <string name="click_to_remove_string">click to remove</string>
    <string name="confirm_password_string">Confirm password</string>
    <string name="create_record_string">Create</string>
    <string name="create_tag_description_string">Please choose special unique name for new tag</string>
    <string name="create_tag_string">Create tag</string>
    <string name="create_wallet_description_string">Please choose special unique name for new wallet</string>
    <string name="create_wallet_string">Create wallet</string>
    <string name="daily_button_string">Daily</string>
    <string name="dashboard_page_menu_string">Dashboard</string>
    <string name="date_semicolon_string">Date:</string>
    <string name="defaultRecordDate">"01.01.1970"</string>
    <string name="defaultRecordName">Some record name</string>
    <string name="defaultRecordValue">1000</string>
    <string name="defaultTrackedDays">Over 9000 years</string>
    <string name="defaultUserName">Some user</string>
    <string name="delete_string">Delete</string>
    <string name="deleted_string">Deleted</string>
    <string name="developer_settings_string">Developer settings</string>
    <string name="edit_icon_edit_date_description_string">Edit icon for edit button</string>
    <string name="edit_record_string">Edit record</string>
    <string name="enter_string_string">Enter string</string>
    <string name="error_icon_string">Error icon</string>
    <string name="error_image_content_description_string">Error image</string>
    <string name="error_string">Error</string>
    <string name="expand_icon_description_string">Expand icon</string>
    <string name="features_string">Features</string>
    <string name="full_button_string">Full</string>
    <string name="history_page_menu_string">History</string>
    <string name="info_text_1">Time info(click to change):</string>
    <string name="Login">Login</string>
    <string name="login_page_register_string">Register</string>
    <string name="loginPage_loginButtonText">Log in</string>
    <string name="logout">Log out</string>
    <string name="main_info_register_page_label_string">Please enter your name and surname</string>
    <string name="month_description_page_daily_string">Daily:</string>
    <string name="month_description_page_next_button_content_description_string">Next month button</string>
    <string name="month_description_page_prev_button_content_description_string">Previous month button</string>
    <string name="month_description_page_total_string">Total:</string>
    <string name="new_record_page_menu_string">New record</string>
    <string name="new_template_dialog_name_string">Name</string>
    <string name="new_template_dialog_value_string">Value</string>
    <string name="next_button_string">Next</string>
    <string name="next_month_string">Next month</string>
    <string name="noTemplates">You haven\'t templates</string>
    <string name="passwordString">Password</string>
    <string name="please_choose_login_string">Please choose your login, it will be used to log into application</string>
    <string name="plus_add">+ Add</string>
    <string name="pm_string">PM</string>
    <string name="prev_button_string">Prev</string>
    <string name="previous_month_string">Previous month</string>
    <string name="privacy_convention_string">I read and agreed this convention</string>
    <string name="register">Register</string>
    <string name="register_page_name_hint_string">Name</string>
    <string name="register_page_surname_hint_string">Surname</string>
    <string name="removed_string">Removed</string>
    <string name="removing_string">Removing…</string>
    <string name="save_string">Save</string>
    <string name="search_icon_content_description_string">Search icon</string>
    <string name="search_string">Search</string>
    <string name="semicolon_string">:</string>
    <string name="settings_header_string">Settings</string>
    <string name="small_cancel_string">Cancel</string>
    <string name="small_ok_string">OK</string>
    <string name="splash_screen_app_logo_string">Splash screen app logo</string>
    <string name="splash_screen_greeting_string">Welcome to MoneySaver</string>
    <string name="success_icon_string">Success icon</string>
    <string name="success_image_content_description_string">Success image</string>
    <string name="tags_string">Tags</string>
    <string name="templates_page_menu_string">Templates</string>
    <string name="time_semicolon_string">Time:</string>
    <string name="undo_string">Undo</string>
    <string name="use_it_button_string">USE IT</string>
    <string name="value_string">Value</string>
    <string name="wallets_string">Wallets</string>
    <string name="week_string">Week</string>
</resources>
