<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:text="@string/defaultRecordName"
            android:id="@+id/recordName"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:gravity="center|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/white"
            android:textSize="22sp" android:layout_width="wrap_content"/>

    <TextView
            android:text="@string/defaultRecordValue"
            android:id="@+id/recordValue"
            android:layout_width="178dp"
            android:layout_height="30dp"
            android:layout_below="@+id/recordName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:gravity="center|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/darker_gray"/>

    <TextView
            android:text="@string/defaultRecordDate"
            android:id="@+id/dateField"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/recordName"
            android:gravity="center|end"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"/>

</RelativeLayout>