<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingStart="24dp" android:paddingEnd="24dp"
        android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
    >
        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/choose_confirm_password_string"
                android:textSize="20sp"
                android:paddingTop="16dp" android:paddingBottom="16dp"
                android:textColor="@color/themeColor"
                android:paddingStart="4dp" android:paddingEnd="4dp"
        />
        <com.nevmem.moneysaver.app.views.CheckableEditText
                app:hint="@string/passwordString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordField"
                app:inputType="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/passwordString"
                app:layout_constraintTop_toTopOf="parent"
        />
        <com.nevmem.moneysaver.app.views.CheckableEditText
                app:hint="@string/confirm_password_string"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPasswordField"
                app:inputType="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/confirm_password_string"
                app:layout_constraintTop_toBottomOf="@id/nameField"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>