<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingStart="24dp" android:paddingEnd="24dp"
        android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
    >
        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/main_info_register_page_label_string"
                android:textSize="20sp"
                android:paddingTop="16dp" android:paddingBottom="16dp"
                android:paddingStart="4dp" android:paddingEnd="4dp"
                android:textColor="@color/themeColor"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:id="@+id/nameField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/register_page_name_hint_string"
                android:textColor="@color/themeColor" android:textColorHint="@color/themeGrayedColor"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/themeColor"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surnameField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/register_page_surname_hint_string"
                android:textColor="@color/themeColor" android:textColorHint="@color/themeGrayedColor"
                app:layout_constraintTop_toBottomOf="@id/nameField"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/themeColor"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>