<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">
    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/header" tools:text="@string/addRecordHeader"
            android:padding="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textColor="@color/default_white_color"
            android:text="@string/addRecordHeader" android:textSize="24sp" android:layout_width="0dp"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:inputType="text"
            android:layout_height="53dp"
            android:id="@+id/recordNameField" tools:text="Record name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:gravity="center|start"
            android:padding="8dp" android:textSize="20sp" android:hint="@string/register_page_name_hint_string"
            android:textColorHint="@color/themeGrayedColor"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/header"
            android:backgroundTint="@color/themeColor"
            android:textColor="@color/themeColor"
    />
    <EditText
            android:layout_height="53dp"
            android:id="@+id/recordValueField" tools:text="Record value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:gravity="center|start"
            android:padding="8dp" android:textSize="20sp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/recordNameField"
            android:hint="@string/value_string" android:textColorHint="@color/themeGrayedColor"
            android:layout_width="0dp"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/themeColor"
            android:textColor="@color/themeColor"
    />
    <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/text_1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/recordValueField"
            android:gravity="center|start" android:text="@string/chooseTag"
    />
    <Spinner
            android:layout_width="0dp" android:layout_height="50dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/recordValueField"
            app:layout_constraintEnd_toStartOf="@id/createTagLayoutHolder"
            android:layout_marginEnd="8dp" android:id="@+id/tags"
            app:layout_constraintStart_toEndOf="@+id/text_1" android:layout_marginStart="16dp"
    />
    <FrameLayout
            app:layout_constraintTop_toBottomOf="@+id/recordValueField"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/createTagLayoutHolder"
            android:layout_marginTop="24dp" android:layout_marginEnd="32dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageButton
                android:contentDescription="@string/add_icon_description_string"
                android:layout_width="50dp" android:layout_height="50dp"
                android:id="@+id/createTagButton"
                android:src="@drawable/add_image"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
        <ProgressBar
                android:id="@+id/processingTags"
                android:layout_width="50dp" android:layout_height="50dp"
                android:padding="10dp"
                android:visibility="gone"
                android:indeterminateTint="@color/default_white_color"
        />
        <ImageView
                android:contentDescription="@string/error_image_content_description_string"
                android:id="@+id/createTagError"
                android:padding="10dp"
                android:src="@drawable/ic_cross"
                android:visibility="gone"
                android:layout_width="50dp" android:layout_height="50dp"/>
    </FrameLayout>
    <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/text_"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:gravity="center|start" android:text="@string/chooseWallet" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_1"
    />
    <Spinner
            android:layout_width="0dp" android:layout_height="49dp"
            app:layout_constraintEnd_toStartOf="@id/createWalletLayoutHolder"
            android:layout_marginEnd="8dp" android:id="@+id/chooseWallet"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tags" app:layout_constraintStart_toEndOf="@+id/text_"
            android:layout_marginStart="16dp"
    />
    <FrameLayout
            android:id="@+id/createWalletLayoutHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags"
            android:padding="0dp"
            android:clipToPadding="false"
            android:layout_marginTop="24dp" android:layout_marginEnd="32dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageButton
                android:contentDescription="@string/add_icon_description_string"
                android:layout_width="50dp" android:layout_height="50dp"
                android:id="@+id/createWalletButton"
                android:src="@drawable/add_image"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
        <ProgressBar
                android:id="@+id/processingWallets"
                android:layout_width="50dp" android:layout_height="50dp"
                android:indeterminateTint="@color/default_white_color"
                android:padding="10dp"
                android:visibility="gone"
        />
        <ImageView
                android:contentDescription="@string/error_image_content_description_string"
                android:id="@+id/createWalletError"
                android:padding="10dp"
                android:src="@drawable/ic_cross"
                android:visibility="gone"
                android:layout_width="50dp" android:layout_height="50dp"/>
    </FrameLayout>
    <FrameLayout
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button
                android:text="@string/create_record_string"
                android:elevation="@dimen/stdElevation"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:id="@+id/addRecord"
                android:background="@drawable/add_button"
                tools:visibility="gone"
        />
        <ProgressBar
                android:background="@drawable/add_button"
                android:layout_width="160dp" android:layout_height="50dp"
                android:padding="7dp" tools:visibility="visible"
                android:visibility="gone"
                android:indeterminateTint="@color/default_white_color"
                android:id="@+id/loading"
        />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>