<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/login_page_background"
                                                   tools:context="com.nevmem.moneysaver.LoginPageActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginField"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/Login"
            android:textColor="@android:color/white"
            android:textColorLink="@color/mainColor" android:textColorHint="#aaa"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/errors"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/loginField" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/passwordString"
            android:textColor="@android:color/white"
            android:textColorLink="@color/mainColor" tools:textColorHint="#aaa"
    />
    <Button
            android:text="@string/loginPage_loginButtonText"
            android:layout_width="171dp"
            android:layout_height="45dp"
            android:id="@+id/loginButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"
            style="@style/SpecialButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="onLoginButtonClick"
            android:background="@color/specialColor"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:id="@+id/appName" android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center|start"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#fff"/>
    <TextView
            android:layout_width="221dp"
            android:layout_height="49dp"
            android:id="@+id/errors" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/appName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:gravity="center" android:textColor="@color/errorColor"
            android:textSize="20sp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/loginPageLoadingBar"
            android:visibility="invisible" tools:visibility="visible" android:indeterminateTint="#fff"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/appName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/appName"/>
</androidx.constraintlayout.widget.ConstraintLayout>