<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
>
    <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="fill"
            android:weightSum="6"
            android:id="@+id/datePickerHeader"
            android:background="@color/backgroundColor"
    >
        <Button
                android:layout_width="wrap_content" android:layout_height="44dp"
                android:id="@+id/cancel"
                android:paddingTop="0dp" android:paddingBottom="0dp"
                android:text="@string/cancel_string" android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/dangerColor"
                android:layout_weight="1"
        />
        <TextView
                android:gravity="center" android:textSize="20sp"
                android:layout_weight="4"
                android:text="@string/choose_date_string" android:layout_height="44dp" android:layout_width="wrap_content"
        />
        <Button
                android:layout_width="wrap_content" android:layout_height="44dp"
                android:id="@+id/ok"
                android:layout_weight="1"
                android:paddingTop="0dp" android:paddingBottom="0dp"
                android:text="@string/small_ok_string" android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/specialColor"
        />
    </LinearLayout>
    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/datePickerHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="3"
            android:background="@color/backgroundColor"
            android:layout_width="match_parent" android:layout_height="200dp">
        <NumberPicker
                android:id="@+id/year"
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
        />
        <NumberPicker
                android:id="@+id/month"
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
        />
        <NumberPicker
                android:id="@+id/day"
                android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:divider="@color/themeColor"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>